# gt_base

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  audio_video_info_tmp.txt  build.py  package.py  pybythec.json
_rez_build/: CMakeCache.txt  Makefile  build.rxt  cmake_install.cmake
_rez_build/platform-linux/arch-x86_64/os-centos-7/: CMakeCache.txt  Makefile  build.rxt  cmake_install.cmake  install_manifest.txt
cmake/macros/: utils.cmake
cmake/modules/: FindFFMPEG.cmake  FindOpenEXR.cmake
include/gt_base/: Image.h  Logger.h  Text.h  Timer.h  Video.h  debugMaya.h  filesystem.h  functions.h  globals.h  imgUtils.h  imgUtils3d.h  string.h  system.h  types.h  vector.h
include/gt_base/types/: f32x2.h  f32x3.h  f32x3x3.h  f32x4.h  f32x4x4.h  u8x3.h
source/: Image.cpp  Logger.cpp  Text.cpp  Video.cpp  filesystem.cpp  functions.cpp  imgUtils.cpp  imgUtils3d.cpp  string.cpp
source/types/: f32x2.cpp  f32x3.cpp  f32x3x3.cpp  f32x4.cpp  f32x4x4.cpp  u8x3.cpp
test/: .pybythec.json  main.cpp  main.py
